Closed Bug 459571 Opened 16 years ago Closed 16 years ago

Places autocomplete results contain incorrect search string

Categories

(Toolkit :: Places, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: neil, Assigned: neil)

Details

(Keywords: regression)

Attachments

(1 file)

From nsIAutoCompleteResult.idl:
 /**
  * The original search string
  */
 readonly attribute AString searchString;

But the result returned from Places autocomplete provides a modified string.

This affects xpfe autocomplete because it sanity-checks the string. Note that both Mork-based histories did return the original string as advertised.
Attached patch Proposed patchSplinter Review
Assignee: nobody → neil
Status: NEW → ASSIGNED
Attachment #342785 - Flags: review?(sdwilsh)
Comment on attachment 342785 [details] [diff] [review]
Proposed patch

Yes, this makes sense.  Edward should take a look at this too.
Attachment #342785 - Flags: review?(sdwilsh)
Attachment #342785 - Flags: review?(edilee)
Attachment #342785 - Flags: review+
Comment on attachment 342785 [details] [diff] [review]
Proposed patch

r=Mardak

Apparently the autocomplete feedback and UI just asks the controller for the search string instead of poking at the AutoCompleteResult.
Attachment #342785 - Flags: review?(edilee) → review+
Pushed changeset 1e58e56a8234 to mozilla-central.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: