Bug 459571 Places autocomplete results contain incorrect search string r=sdwilsh,mardak